Empezado a crear el modal, falta posicionarlo con un media query para poder hacerlo responsivo, ademas de agregarle el efecto overlay apropiadamente. Asi mismo, se debe agregar un fadeOut para que el modal no desaparezca bruscamente

--- a/Css/Sass/body.sass
+++ b/Css/Sass/body.sass
@@ -26,13 +26,9 @@ div.circle-img-box.small
 img.rounded 
 	border-radius: 50% 
 
-.centered 
-	align-content: center 
-	text-align: center 
-	display: flex
-	align-items: center 
-	justify-content: center
 
+.center
+	padding-top: 50% !important 
 
 .text-center
 	align-content: center
