--- a/Css/main.css
+++ b/Css/main.css
@@ -1101,6 +1101,21 @@ div.cr.modal.opened {
   animation: appear 0.4s ease-in-out !important;
   display: block; }
 
+span.overlay {
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  transition: opacity 0.3s ease-out;
+  opacity: 1;
+  background: rgba(0, 0, 0, 0.476);
+  animation: fadeIn 0.4s ease-in-out; }
+
+span.overlay.hide {
+  opacity: 0; }
+
 @-moz-keyframes appear {
   0% {
     display: none;
@@ -1145,46 +1160,13 @@ div.cr.modal.opened {
   100% {
     opacity: 1 !important;
     transform: scale(1); } }
-@-moz-keyframes disappear {
+@keyframes fadeIn {
   0% {
-    display: block;
-    opacity: 1; }
-  1% {
-    transform: scale(1);
     opacity: 0; }
+  50% {
+    opacity: 0.5; }
   100% {
-    display: none;
-    transform: scale(0); } }
-@-ms-keyframes disappear {
-  0% {
-    display: block;
-    opacity: 1; }
-  1% {
-    transform: scale(1);
-    opacity: 0; }
-  100% {
-    display: none;
-    transform: scale(0); } }
-@-webkit-keyframes disappear {
-  0% {
-    display: block;
-    opacity: 1; }
-  1% {
-    transform: scale(1);
-    opacity: 0; }
-  100% {
-    display: none;
-    transform: scale(0); } }
-@keyframes disappear {
-  0% {
-    display: block;
-    opacity: 1; }
-  1% {
-    transform: scale(1);
-    opacity: 0; }
-  100% {
-    display: none;
-    transform: scale(0); } }
+    opacity: 1 !important; } }
 div.cr.snackbar {
   visibility: hidden;
   position: absolute;
