--- a/Css/Sass/body.sass
+++ b/Css/Sass/body.sass
@@ -1,3 +1,5 @@
+@import 'variables'
+
 img.xsmall 
 	max-width: 30% !important 
 	height: auto 
@@ -27,10 +29,13 @@ img.rounded
 	border-radius: 50% 
 
 
-.center
-	padding-top: 50% !important 
-
 .text-center
 	align-content: center
 	text-align: center  !important
+
+.text-white 
+	color: $white !important 
+
+.text-black 
+	color: $black !important 
 
