--- a/Css/Sass/inputs.sass
+++ b/Css/Sass/inputs.sass
@@ -126,32 +126,26 @@ div.cr.input.label
     position: relative 
     white-space: nowrap
     margin: 10px auto
+    box-sizing: border-box
+    overflow: hidden 
+    display: inline-block
     input
         position: relative
+        display: inline-block
         left: -4px
     div.label
         position: relative 
-        top: 0
-        display: inline
-        overflow: hidden 
-
-        padding-top: 9.35px
-        padding-left: 20px
-        padding-right: 20px
-        padding-bottom: 9.15px
-
+        padding: 9px 22px 9px 15px !important 
+        display: inline 
         background: lighten($gray, 30)
         text-align: center 
-        min-width: 15px
-
         color: lighten($black, 30)
-        height: 22.5px
-        border-top-left-radius: 2px
-        border-bottom-left-radius: 2px
-        border-right: none !important 
-        border: 0.5px solid lighten($gray, 20)
+        height: 22.5 
+        border-top-left-radius: 2px 
+        border-bottom-left-radius: 2px 
+        border-right: none 
+        border: 0.5px solid rgba($gray, .4)
         font-weight: bold
-
 
     div.label.blue
         background: $blue 
@@ -222,19 +216,13 @@ div.cr.input.label
         top: 0 
         right: 0.7%
         outline: none 
-
         text-decoration: none 
         font-size: 14px
-
-        // padding-left: 1.3rem
-        // padding-right: 1.3rem
-
         padding-top: 9.52px 
         padding-left: 20px 
         padding-right: 18px 
         padding-bottom: 9.52px
-
-        height: 41.5px
+        height: 42px
         background: lighten($gray, 30)
         color: lighten($black, 30)
 
@@ -639,7 +627,10 @@ div.cr.input.adaptive
         left: 0 !important
 
     div.ender, button.ender
-        right: 0 !important        
+        right: 0 !important   
+
+    div.label
+        left: 0 !important      
 
 // NO es necesario
 input.cr.input.error
