Modals medium agregados con version responsive de prueba, hay que hacerle modificaciones para perfeccionar la posicion que mantiene

--- a/Css/Sass/modals.sass
+++ b/Css/Sass/modals.sass
@@ -229,9 +229,8 @@ span.overlay.hide
 
 
 /*Modal login*/
-div.cr.modal.small-login
+div.cr.modal.small
     width: 350px 
-    // margin-left: -13%
     margin-top: -80px
 
     @media screen and (max-width: 550px)
@@ -252,6 +251,26 @@ div.cr.modal.small-login
     @media screen and (min-width: 1200px)
         margin-left: -14%
 
+div.cr.modal.medium 
+    width: 600px 
+    margin-top: -80px
+    @media screen and (max-width: 680px)
+        margin-left: -46% !important
+        width: 100% 
+        max-width: 95% !important
+
+    @media screen and (max-width: 767px)
+        margin-left: -40%
+        max-width: 95% !important
+
+    @media screen and (min-width: 768px)
+        margin-left: -35%
+
+    @media screen and (max-width: 1199px) and (min-width: 992px)
+        margin-left: -30%
+
+    @media screen and (min-width: 1200px)
+        margin-left: -22%
 
 
 @-moz-keyframes appear 
