--- a/Css/Sass/modals.sass
+++ b/Css/Sass/modals.sass
@@ -1,28 +1,18 @@
 div.cr.modal
     position: fixed  
-
     border-radius: 4px 
-
     width: 500px
     min-height: 200px
-
     top: 30% 
     left: 50% 
     margin-top: -50px
-
-
     display: none 
-
     z-index: 200 
-
     overflow: hidden 
-
     transition: transform 0.4s ease-out, opacity 0.4s ease-out, border-color 0.6s ease-out
-
     box-shadow: 1px 1px 1px 1px rgba($gray, .3)
     background: darken($white, 1)
     color: lighten($black, 30)
-
     @media screen and (max-width: 767px)
         width: auto 
         margin-left: -47.5%
@@ -272,6 +262,40 @@ div.cr.modal.medium
     @media screen and (min-width: 1200px)
         margin-left: -22%
 
+div.cr.modal.big 
+    width: 800px 
+    margin-top: -80px 
+    @media screen and (max-width: 680px)
+        margin-left: -46% !important
+        width: 100% 
+        max-width: 95% !important
+
+    @media screen and (max-width: 767px)
+        margin-left: -47%
+        max-width: 95% !important
+
+    @media screen and (min-width: 768px) and (max-width: 850px)
+        margin-left: -47%
+        max-width: 95% !important 
+
+    @media screen and (min-width: 851px) and (max-width: 991px)
+        margin-left: -44%
+
+    @media screen and (max-width: 1199px) and (min-width: 992px)
+        margin-left: -37.6%
+        max-width: 95% !important 
+
+    @media screen and (min-width: 1200px)
+        margin-left: -30%
+
+div.cr.modal.content-scroll
+    // height: 500px
+    margin-top: -150px 
+    div.modal-body 
+        max-height: 500px !important 
+        overflow-y: auto 
+
+
 
 @-moz-keyframes appear 
     0% 
@@ -354,6 +378,7 @@ div.cr.modal.medium
         opacity: 0.5 
     100%
         opacity: 1 !important 
+
 
 
 
